--- a/src/app/main/pages/quality/analysis/progress/dialogs/detail-internal-dialog/detail-internal-dialog.component.html
+++ b/src/app/main/pages/quality/analysis/progress/dialogs/detail-internal-dialog/detail-internal-dialog.component.html
@@ -21,17 +21,6 @@
                 <p><span style="font-weight: bold;"> Fecha :</span>
                     {{data.createdAt ? ((data.createdAt['seconds'] * 1000) | date : 'dd/MM/yy - hh:mm:ss'): ''}}
                 </p>
-                <!--  <ng-container *ngIf="data.correctiveActions">
-                    <p class="corrective-actions__title">Acciones correctivas</p>
-                    <div *ngFor="let action of data.correctiveActions; let i = index" class="corrective-actions__list">
-                        <span class="corrective-actions__index" [ngClass]="{'corrective-actions__index--done' : action.kit}">{{i+1}}</span>
-                        <span class="corrective-actions__description">{{action.corrective}}</span>
-                        <span class="ms-fill"></span>
-                        <span class="corrective-actions__area">{{action.name}}</span>
-                    </div>  
-                    </ng-container> 
-                 -->
-
 
                 <mat-form-field appearance="outline" id="result" class="timer-container__input">
                     <mat-label>Detalle de evento</mat-label>
@@ -53,8 +42,22 @@
                 <p class="analysis-result"><span> Causante de falla:</span> {{data.analysis ?
                     data.analysis['causeFailure'] : '-'}}</p>
                 <p class="analysis-result"><span> Proceso:</span> {{data.analysis ? data.analysis['process'] : '-'}}</p>
-                <p class="analysis-result"><span> Observacion:</span> {{data.analysis ? data.analysis['observation'] :
+                <p class="analysis-result"><span> Observación:</span> {{data.analysis ? data.analysis['observation'] :
                     '-'}}</p>
+
+                <ng-container *ngIf="data.correctiveActions">
+                    <div class="details-title">
+                        <h3>Acciones correctivas</h3>
+                        <span class="ms-fill details-title__decoration"></span>
+                    </div>
+                    <div *ngFor="let action of data.correctiveActions; let i = index" class="corrective-actions__list">
+                        <span class="corrective-actions__index"
+                            [ngClass]="{'corrective-actions__index--done' : action.kit}">{{i+1}}</span>
+                        <span class="corrective-actions__description">{{action.corrective}}</span>
+                        <span class="ms-fill"></span>
+                        <span class="corrective-actions__area">{{action.name}}</span>
+                    </div>
+                </ng-container>
 
                 <div class="details-title">
                     <h3>Imágenes generales</h3>
