--- a/src/app/main/pages/quality/analysis/progress/progress.component.html
+++ b/src/app/main/pages/quality/analysis/progress/progress.component.html
@@ -51,7 +51,7 @@
               <button mat-menu-item (click)="analysis(item)">
                 <mat-icon>add_task</mat-icon> Análisis
               </button>
-              <button mat-menu-item (click)="generateReport(item)">
+              <button mat-menu-item (click)="printPdf(item)">
                 <mat-icon>picture_as_pdf</mat-icon> Reporte
               </button>
               <button mat-menu-item (click)="timeline(item)">
