:sparkles: Feature done :smile:

--- a/src/app/main/pages/quality/analysis/results/results.component.html
+++ b/src/app/main/pages/quality/analysis/results/results.component.html
@@ -170,6 +170,9 @@
                                 <button mat-menu-item (click)="detailDialog(element, element.eventType)">
                                     <mat-icon>visibility</mat-icon> Detalle
                                 </button>
+                                <button mat-menu-item (click)="printPdf(element)">
+                                    <mat-icon>picture_as_pdf</mat-icon> Reporte
+                                  </button>
                                 <button mat-menu-item (click)="timeline(element)">
                                     <mat-icon>timeline</mat-icon> Línea de tiempo
                                 </button>
