--- a/src/app/main/pages/quality/analysis/tracing/tracing.component.html
+++ b/src/app/main/pages/quality/analysis/tracing/tracing.component.html
@@ -52,11 +52,11 @@
               <button mat-menu-item (click)="accCorrective(item)">
                 <mat-icon>fact_check</mat-icon> Acc Correctivas
               </button>
+              <button mat-menu-item (click)="printPdf(item)">
+                <mat-icon>picture_as_pdf</mat-icon> Reporte
+              </button>
               <button mat-menu-item (click)="timeline(item)">
                 <mat-icon>timeline</mat-icon> Línea de tiempo
-              </button>
-              <button mat-menu-item (click)="reports(item)">
-                <mat-icon>description</mat-icon>Ver reportes
               </button>
             </mat-menu>
             <button mat-icon-button [matMenuTriggerFor]="requestsMenu">
@@ -67,10 +67,13 @@
         <div class="info-box">
           <div class="lj" matTooltip="WOF" matTooltipPosition="above"><span>OT {{item.workOrder}}</span> </div>
           <div class="info-row"> Componente: <span> {{item.component}}</span> </div>
-          <div *ngIf="item.workShop" class="info-row"> Taller: <span> {{item.workShop? item.workShop : '-'}}</span></div>
-          <div *ngIf="item.miningOperation" class="info-row"> Operación minera: <span> {{item.miningOperation? item.miningOperation : '-'}}</span></div>
+          <div *ngIf="item.workShop" class="info-row"> Taller: <span> {{item.workShop? item.workShop : '-'}}</span>
+          </div>
+          <div *ngIf="item.miningOperation" class="info-row"> Operación minera: <span> {{item.miningOperation?
+              item.miningOperation : '-'}}</span></div>
           <div class="info-row"> Especialista: <span> {{item.specialist['name']}}</span></div>
-          <div class="info-row"> Fecha: <span> {{(item.createdAt['seconds'] * 1000) | date : 'dd/MM/yy - hh:mm:ss'}} </span></div>
+          <div class="info-row"> Fecha: <span> {{(item.createdAt['seconds'] * 1000) | date : 'dd/MM/yy - hh:mm:ss'}}
+            </span></div>
         </div>
         <div class="ms-fill"></div>
       </div>
