--- a/src/app/main/pages/andon/report/report.component.html
+++ b/src/app/main/pages/andon/report/report.component.html
@@ -13,16 +13,21 @@
             <form [formGroup]="reportForm" autocomplete="off" class="report__form">
                 <mat-form-field appearance="outline" id="result" class="report__form--input">
                     <mat-label>Nombre de bahia</mat-label>
-                    <mat-select formControlName="name">
-                        <mat-option *ngFor="let item of nameBahias$ | async" [value]="item">{{item.name}} - <span
-                                style="color: #8f8a8a;">{{item.workShop}}</span></mat-option>
-                    </mat-select>
+                    <input matInput type="text" formControlName="name" [matAutocomplete]="autoBay" placeholder="Escriba"
+                        autocomplete="off">
+                    <mat-autocomplete #autoBay="matAutocomplete" [displayWith]="displayBay">
+                        <mat-option *ngFor="let item of nameBahias$ | async" [value]="item">
+                            {{item.name}} - <span style="color: #8f8a8a;">{{item.workShop}}</span>
+                        </mat-option>
+                    </mat-autocomplete>
+                    <mat-error *ngIf="reportForm.get('name').errors?.noSelection && !reportForm.get('name').errors?.required">
+                        {{reportForm.get('name')?.errors?.noSelection}}
+                    </mat-error>
                     <mat-hint *ngIf="!(nameBahias$ | async)">
                         <mat-progress-bar mode="indeterminate"></mat-progress-bar>
                         <p>Cargando lista ...</p>
                     </mat-hint>
-
-                    <mat-error *ngIf="reportForm.controls['name'].errors">
+                    <mat-error *ngIf="reportForm.controls['name'].errors?.required">
                         Campo <strong>requerido.</strong>
                     </mat-error>
                 </mat-form-field>
