--- a/src/app/main/pages/budgets/budgets/budgets-pending-send/budgets-pending-send.component.html
+++ b/src/app/main/pages/budgets/budgets/budgets-pending-send/budgets-pending-send.component.html
@@ -1,6 +1,6 @@
 <div *ngIf="auth.user$ | async as user">
   <div class="ms-kanban-toolbar">
-    <div class="cantidad">
+    <div class="quantity-wrapper">
       Cant. W.O.
       <span class="quantity">{{ cantWO }}</span>
     </div>
