:sparkles: Settings section done

--- a/src/app/main/main/main.component.html
+++ b/src/app/main/main/main.component.html
@@ -121,7 +121,7 @@
                 Presupuestos
               </span>
             </a>
-            <a mat-list-item class="mat-list-item-second" [routerLink]="['/main/budgets-settings']"
+            <a mat-list-item class="mat-list-item-second" [routerLink]="['/main/budgets-configurations']"
               routerLinkActive="active" (click)="drawer.toggle()">
               <mat-icon mat-list-icon class="mat-icon-menu">settings</mat-icon>
               <span class="mat-item-list-span">
