:hammer: modifications applied

--- a/src/app/main/pages/budgets/budgets/budgets.component.html
+++ b/src/app/main/pages/budgets/budgets/budgets.component.html
@@ -1,6 +1,6 @@
 <div class="ms-container">
   <div class="ms-toolbar">
-    <mat-icon mat-list-icon class="mat-icon-menu">fact_check</mat-icon>
+    <mat-icon mat-list-icon class="ms-toolbar__icon">fact_check</mat-icon>
     <h1 class="ms-toolbar__title">Presupuestos</h1>
   </div>
   <div class="container-body">
