--- a/src/app/main/pages/budgets/budgets-configurations/budgets-configurations.component.html
+++ b/src/app/main/pages/budgets/budgets-configurations/budgets-configurations.component.html
@@ -1,6 +1,6 @@
 <div class="ms-container">
   <div class="ms-toolbar">
-    <mat-icon mat-list-icon class="mat-icon-menu">settings</mat-icon>
+    <mat-icon mat-list-icon class="ms-toolbar__icon">settings</mat-icon>
     <h1 class="ms-toolbar__title">Configuración</h1>
   </div>
   <div class="container-body">
