--- a/src/app/main/pages/budgets/budgets-configurations/budgets-configurations.component.html
+++ b/src/app/main/pages/budgets/budgets-configurations/budgets-configurations.component.html
@@ -115,7 +115,7 @@
                   </mat-card-header>
                   <mat-card-content class="container-expansion1__content-card-content">
                     <div role="list" *ngFor="
-                        let reasonForModification of reasonsForModificationList$ | async;
+                        let reasonForModification of reasonsForModification$ | async;
                         let i = index
                       ">
                       <div class="item-list">
