--- a/src/app/main/pages/budgets/budgets-configurations/dialogs/add-group-dialog/add-group-dialog.component.html
+++ b/src/app/main/pages/budgets/budgets-configurations/dialogs/add-group-dialog/add-group-dialog.component.html
@@ -22,14 +22,14 @@
           id="result"
           class="timer-container__input"
         >
-          <mat-label>Ingrese nombre de difusion</mat-label>
+          <mat-label>Ingrese el nombre del grupo</mat-label>
           <input
             matInput
             type="text"
-            placeholder="Ingrese nombre de difusion"
-            formControlName="broadcast"
+            placeholder="Ingrese el nombre del grupo"
+            formControlName="groupName"
           />
-          <mat-error *ngIf="form.controls['broadcast'].errors">
+          <mat-error *ngIf="form.controls['groupName'].errors">
             Campo <strong>requerido.</strong>
           </mat-error>
         </mat-form-field>
